--- a/docs/models.lyx
+++ b/docs/models.lyx
@@ -1335,10 +1335,7 @@ To make this one single matrix product, we can write
 \begin_inset Formula 
 \[
 E_{t-2h}\left[\left(\begin{array}{ccc}
-A_{0}\\
- & A_{1}\\
- &  & A_{2}
-\end{array}\right)\left(\begin{array}{c}
+A_{0} & A_{1} & A_{2}\end{array}\right)\left(\begin{array}{c}
 X_{t,h}\\
 LX_{t,h}\\
 L^{2}X_{t,h}
